--- a/PS4/SpreadsheetGUI/SpreadsheetGUI.csproj
+++ b/PS4/SpreadsheetGUI/SpreadsheetGUI.csproj
@@ -36,6 +36,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Resources\Libraries\Formula.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="SpreadsheetPanel">
       <HintPath>..\..\..\..\..\Desktop\PS6Skeleton\SpreadsheetPanel\bin\Debug\SpreadsheetPanel.dll</HintPath>
     </Reference>
@@ -55,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientSocket.cs" />
     <Compile Include="spreadsheetForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +91,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ConnectionDialog\ConnectionDialog.csproj">
+      <Project>{9f289a53-ad77-4963-a54f-0c2103f68500}</Project>
+      <Name>ConnectionDialog</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Spreadsheet\Spreadsheet.csproj">
       <Project>{996b38d2-612f-4175-940b-b0f6758869be}</Project>
       <Name>Spreadsheet</Name>
