more client fixes

--- a/PS4/ConnectionDialog/ConnectionDialog.csproj
+++ b/PS4/ConnectionDialog/ConnectionDialog.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{9F289A53-AD77-4963-A54F-0C2103F68500}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConnectionDialog</RootNamespace>
+    <RootNamespace>SpreadsheetGUI</RootNamespace>
     <AssemblyName>ConnectionDialog</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -63,6 +63,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
